[metadata]
name = amulet-editor
url = https://www.amuletmc.com
author = James Clare, Ben Gothard et al.
author_email = amuleteditor@gmail.com
classifiers=
    Programming Language :: Python :: 3
    Operating System :: OS Independent
description = A new Minecraft world editor and converter that supports all versions since Java 1.12 and Bedrock 1.7.
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any

[options]
python_requires = >=3.11
install_requires =
    PySide6_Essentials~=6.5
    numpy~=2.0
    pyopengl~=3.0
    packaging
    amulet_nbt~=4.0a2
    amulet_core==2.0a7
    amulet_runtime_final~=1.1
    Pillow

package_dir=
    =src
packages = find_namespace:

[options.packages.find]
where=src

[options.package_data]
* =
    **/*.hpp
    **/*.cpp
    **/*.jpg
    **/*.png
    **/*.svg
    **/*.ico
    **/*.lang
    **/*.json
    **/*.qss

[options.exclude_package_data]
* =
    **/*.py.cpp


[options.extras_require]
docs =
    Sphinx>=1.7.4
    sphinx-autodoc-typehints>=1.3.0
    sphinx_rtd_theme>=0.3.1
dev =
    black>=22.3
    pre_commit>=1.11.1
    pylint>=2.12.2
    isort
    autoflake
    mypy
    types-pyinstaller
    wheel
    versioneer


[options.entry_points]
pyinstaller40 =
    hook-dirs = amulet_editor.__pyinstaller:get_hook_dirs
console_scripts =
    amulet_editor = amulet_editor.__main__:main
gui_scripts =
    amulet_map_editor_no_console = amulet_editor.__main__:main


# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = src/amulet_editor/_version.py
versionfile_build = amulet_editor/_version.py
tag_prefix =
parentdir_prefix = amulet_editor-
